--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-.nav.justify-content-end {
-    background-color: black;
+.navbar {
+    background-color: black!important;
+    color: white!important;
 }
 a {
     color: white;
@@ -7,7 +8,7 @@ a {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 .contact {
-    padding-right: 200px;
+    padding-right: 200px; 
 }
 .jumbotron {
     background-image: url(../images/headerbackground.png);
@@ -126,6 +127,7 @@ p.about-contact-info {
 }
 ul {
     list-style-type: none;
+    text-align: center;
 }
 p.mb-0 {
     color: white;
